Use non-deprecated Kotlin DSL for Kotlin compile options
Closes gh-1495